--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>Account Privati - Titanium Matrix</title>
 
@@ -23,72 +23,67 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <!-- Design System Master (Titanium Matrix V3.8) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.8">
+    <!-- Design System Master (Titanium Matrix V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/dashboard_common.css?v=1.0">
+    <link rel="stylesheet" href="assets/css/account.css?v=3.7">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body
-    style="font-family: 'Manrope', sans-serif; background-color: #0a0f1e; color: #f8fafc; margin: 0; padding: 0; overflow-x: hidden;"
-    class="antialiased">
+<body class="titanium-bg">
     <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
-    <div
-        style="position: relative; display: flex; flex-direction: column; width: 100%; min-height: 100vh; max-width: 48rem; margin-top: 0; margin-bottom: 0; margin-left: auto; margin-right: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5); overflow: hidden; background-color: #0a0f1e; border-left: 1px solid rgba(255, 255, 255, 0.05); border-right: 1px solid rgba(255, 255, 255, 0.05);">
+    <div class="titanium-container">
 
         <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
-        <div class="glass-glow"></div>
+        <div class="titanium-glow"></div>
 
         <!-- HEADER FISSO (Protocollo v3.0 Balanced) -->
-        <header class="titanium-header">
-            <div id="header-content" class="header-balanced-container">
-                <div id="header-left" class="header-left"></div>
-                <div id="header-center" class="header-center"></div>
-                <div id="header-right" class="header-right"></div>
-            </div>
-        </header>
+        <header id="header-placeholder" class="titanium-header"></header>
 
+        <div class="spacer-header"></div>
+
+        <!-- Main Content -->
         <main class="titanium-main">
 
-            <!-- SEARCH BAR (Standard Titanium) -->
-            <div style="padding: 0 0.5rem; margin-bottom: 1.5rem; position: relative; z-index: 40;">
-                <div style="position: relative;">
-                    <div
-                        style="position: absolute; top: 0; bottom: 0; left: 1rem; display: flex; align-items: center; pointer-events: none;">
-                        <span class="material-symbols-outlined" style="opacity: 0.3;">search</span>
-                    </div>
-                    <input type="search" id="account-search" data-t-placeholder="search_placeholder"
-                        placeholder="Cerca account o credenziali..." class="titanium-search-input">
+            <!-- SEARCH BAR (Standard Titanium UI) -->
+            <!-- SEARCH BAR (Standard Titanium UI) -->
+            <div class="search-container mb-20">
+                <div class="glass-field border-glow"
+                    style="border-radius: 12px; height: 50px; padding: 0 1rem; display: flex; align-items: center; gap: 0.75rem;">
+                    <span class="material-symbols-outlined" style="opacity: 0.5;">search</span>
+                    <input type="search" id="account-search" placeholder="Cerca account o credenziali..."
+                        data-t-placeholder="search_placeholder"
+                        style="width: 100%; background: transparent; border: none; outline: none; height: 100%; font-size: 1rem; color: var(--text-primary);">
                 </div>
             </div>
 
+            <div class="h-8"></div>
+
             <!-- ACCOUNTS CONTAINER -->
-            <div id="accounts-container" class="dashboard-grid"
-                style="padding-bottom: 6rem; position: relative; z-index: 30;">
-                <!-- Data loading placeholder -->
-                <div
-                    style="grid-column: 1 / -1; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 5rem 0; gap: 1rem; opacity: 0.4;">
-                    <span class="material-symbols-outlined"
-                        style="font-size: 40px; color: var(--accent-blue); animation: spin 2s linear infinite;">sync</span>
-                    <p style="font-size: 0.75rem; font-weight: bold; text-transform: uppercase; letter-spacing: 3px;"
-                        data-t="analyzing_data">Analisi
-                        dati...</p>
+            <div id="accounts-container" class="accounts-grid-list">
+                <!-- Loading Spinner -->
+                <div class="loading-full">
+                    <div class="titanium-spinner"></div>
+                    <p data-t="loading_data">Caricamento...</p>
                 </div>
             </div>
 
         </main>
 
+        <div class="spacer-footer"></div>
+
         <!-- FOOTER PREMIUM -->
-        <div id="footer-placeholder"></div>
+        <footer id="footer-placeholder" class="titanium-footer"></footer>
 
     </div>
 
     <!-- SCRIPTS MODULARI -->
-    <script type="module" src="assets/js/main.js?v=3.5"></script>
-    <script type="module" src="assets/js/account_privati_titanium.js?v=3.5"></script>
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/account_privati.js?v=3.1"></script>
 </body>
 
 </html>
