--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>Aggiungi nuova Azienda</title>
 
@@ -15,9 +15,14 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/account.css?v=3.1">
+
+    <!-- Core Engine -->
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
     <style>
         /* Form Controls Overrides per stile Legacy-to-V3 */
@@ -50,30 +55,14 @@
     </style>
 </head>
 
-<body class="font-sans antialiased bg-[#0a0f1e] text-slate-50 selection:bg-blue-500/30">
+<body class="titanium-bg">
 
-    <div
-        class="relative flex h-full min-h-screen w-full flex-col md:max-w-3xl lg:max-w-5xl mx-auto shadow-2xl overflow-hidden bg-[#0a0f1e]">
+    <div class="titanium-container">
+        <div class="titanium-glow"></div>
 
-        <!-- Header -->
-        <header class="fixed top-0 left-0 right-0 md:max-w-3xl lg:max-w-5xl mx-auto glass-header z-50 px-4 py-3">
-            <div class="flex items-center justify-between w-full h-10 gap-4">
-                <a href="lista_aziende.html" id="btn-back"
-                    class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
-                    <span class="material-symbols-outlined text-[24px]">arrow_back</span>
-                </a>
-                <h2 class="text-white text-lg font-bold tracking-tight text-center flex-1">
-                    Nuova Azienda
-                </h2>
-                <a href="home_page.html"
-                    class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
-                    <span class="material-symbols-outlined text-[24px]">home</span>
-                </a>
-            </div>
-        </header>
-
-        <!-- Spacer -->
-        <div class="h-16 w-full shrink-0"></div>
+        <!-- Automated Titanium Header -->
+        <header id="header-placeholder" class="titanium-header"></header>
+        <div class="spacer-header"></div>
 
         <!-- Main Content -->
         <main class="titanium-main">
@@ -695,45 +684,15 @@
                     </div>
                 </div>
 
-                <!-- Fixed Footer -->
-                <div
-                    class="fixed bottom-0 left-0 right-0 md:max-w-3xl lg:max-w-5xl mx-auto p-4 bg-[#0a0f1e]/80 backdrop-blur-xl border-t border-white/5 z-40">
-                    <button id="btn-save-azienda"
-                        class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white rounded-xl shadow-lg shadow-blue-900/40 font-bold text-lg flex items-center justify-center gap-2 transition-all active:scale-[0.98]">
-                        <span class="material-symbols-outlined">save</span>
-                        Salva Azienda
-                    </button>
-                </div>
-
-                <!-- Toast -->
-                <div id="toast-container"
-                    class="fixed bottom-24 left-1/2 -translate-x-1/2 bg-slate-900 border border-white/10 text-white px-6 py-3 rounded-full text-sm font-bold shadow-2xl opacity-0 transition-all translate-y-10 pointer-events-none z-[100] flex items-center gap-2">
-                    <span id="toast-icon" class="material-symbols-outlined">info</span>
-                    <span id="toast-message">Messaggio...</span>
-                </div>
-
+                <div class="spacer-footer"></div>
             </div>
         </main>
+        <!-- Footer Standard -->
+        <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script>
-        // Le funzioni di preview e toggle password sono gestite da assets/js/aggiungi_azienda.js
-        function toggleSection(id) {
-            const el = document.getElementById(id);
-            const arrow = document.getElementById('arrow-' + id);
-            if (!el) return;
-            if (el.classList.contains('hidden')) {
-                el.classList.remove('hidden');
-                if (arrow) arrow.style.transform = 'rotate(180deg)';
-            } else {
-                el.classList.add('hidden');
-                if (arrow) arrow.style.transform = 'rotate(0deg)';
-            }
-        }
-    </script>
-
-    <script src="assets/js/aggiungi_azienda.js" type="module"></script>
+    <script src="assets/js/aggiungi_azienda.js?v=3.1" type="module"></script>
 </body>
 
 </html>
