--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Archivio Account - Titanium</title>
 
     <!-- Google Fonts -->
@@ -14,33 +14,30 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
-    <script src="assets/js/translations.js?v=3.5"></script>
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <script src="assets/js/translations.js?v=3.1"></script>
 </head>
 
-<body class="antialiased">
-    <div class="titanium-box">
+<body class="titanium-bg">
+    <div class="titanium-container">
         <!-- Faro Estetico -->
-        <div class="glass-glow"></div>
+        <div class="titanium-glow"></div>
 
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div class="header-balanced-container">
-                <!-- ZONA SINISTRA: Navigazione + Delete (2 icone) -->
+                <!-- ZONA SINISTRA: Navigazione (1 icona) -->
                 <div class="header-left">
                     <a href="impostazioni.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">arrow_back</span>
                     </a>
-                    <button id="btn-empty-trash" class="btn-icon-header" style="color: #f87171;">
-                        <span class="material-symbols-outlined">delete_forever</span>
-                    </button>
                 </div>
 
                 <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
@@ -92,6 +89,15 @@
                 </div>
             </div>
 
+            <!-- Action Bar: Empty Trash -->
+            <div style="display: flex; justify-content: flex-end; padding: 0 0.5rem;">
+                <button id="btn-empty-trash" class="auth-btn"
+                    style="width: auto; padding: 0.5rem 1rem; background: rgba(244, 67, 54, 0.1); border: 1px solid rgba(244, 67, 54, 0.3); color: #f44336; font-size: 0.8rem; display: flex; align-items: center; gap: 0.5rem;">
+                    <span class="material-symbols-outlined" style="font-size: 1.1rem;">delete_forever</span>
+                    <span data-t="empty_trash">Svuota Cestino</span>
+                </button>
+            </div>
+
             <!-- Hint Swipe -->
             <div
                 style="display: flex; justify-content: center; gap: 1rem; opacity: 0.4; font-size: 0.7rem; font-weight: 700; text-transform: uppercase;">
@@ -113,28 +119,13 @@
                 </div>
             </div>
 
-        </main>
-
-        <!-- FOOTER PREMIUM -->
-        <div id="footer-placeholder"></div>
+            <div class="spacer-footer"></div>
+            <!-- FOOTER PREMIUM -->
+            <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
-
-
-    <!-- Inline Utils -->
-    <style>
-        /* Fix per inputs in settings styling */
-        input[type="search"]::placeholder {
-            color: rgba(255, 255, 255, 0.3);
-        }
-
-        select option {
-            color: white;
-        }
-    </style>
-
     <!-- Scripts -->
-    <script type="module" src="assets/js/archivio_account.js?v=3.5"></script>
+    <script type="module" src="assets/js/archivio_account.js?v=3.1"></script>
 </body>
 
 </html>
