--- a/Frontend/public/configurazione_automezzi.html
+++ b/Frontend/public/configurazione_automezzi.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title data-t="vehicles_config_title">Configurazione Automezzi - Titanium Account</title>
 
     <!-- Google Fonts -->
@@ -14,11 +14,15 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
 
-    <!-- CSS specifico per tabelle -->
+    <!-- Core Engine -->
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+
     <style>
         .table-container {
             width: 100%;
@@ -40,16 +44,13 @@
         }
     </style>
 
-    <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
+    </style>
 </head>
 
-<body class="antialiased">
-    <div class="titanium-box">
+<body class="titanium-bg">
+    <div class="titanium-container">
         <!-- Faro Estetico -->
-        <div class="glass-glow"></div>
+        <div class="titanium-glow"></div>
 
         <!-- HEADER FISSO -->
         <header class="titanium-header">
@@ -76,6 +77,8 @@
                 </div>
             </div>
         </header>
+
+        <div class="spacer-header"></div>
 
         <main class="settings-container no-select">
             <div class="settings-group">
@@ -186,14 +189,13 @@
                     </div>
                 </div>
             </div>
-        </main>
-
-        <!-- FOOTER PREMIUM -->
-        <div id="footer-placeholder"></div>
+            <div class="spacer-footer"></div>
+            <!-- FOOTER PREMIUM -->
+            <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/configurazione_automezzi.js?v=3.5" type="module"></script>
+    <script src="assets/js/configurazione_automezzi.js?v=3.1" type="module"></script>
 </body>
 
 </html>
