--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title data-t="general_config_title">Configurazione Generali - Titanium Account</title>
 
     <!-- Google Fonts -->
@@ -14,9 +14,9 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
 
     <!-- CSS specifico per tabelle -->
     <style>
@@ -41,38 +41,32 @@
     </style>
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+
+    </style>
 </head>
 
-<body
-    style="font-family: 'Manrope', sans-serif; background-color: #0a0f1e; color: #f8fafc; margin: 0; padding: 0; overflow-x: hidden;"
-    class="antialiased">
-    <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
-    <div
-        style="position: relative; display: flex; flex-direction: column; width: 100%; min-height: 100vh; max-width: 48rem; margin-top: 0; margin-bottom: 0; margin-left: auto; margin-right: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5); overflow: hidden; background-color: #0a0f1e; border-left: 1px solid rgba(255, 255, 255, 0.05); border-right: 1px solid rgba(255, 255, 255, 0.05);">
+<body class="titanium-bg">
+    <div class="titanium-container">
         <!-- Faro Estetico -->
-        <div class="glass-glow"></div>
+        <div class="titanium-glow"></div>
 
+        <!-- HEADER FISSO -->
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div class="header-balanced-container">
-                <!-- ZONA SINISTRA: Navigazione (1 icona) -->
                 <div class="header-left">
                     <a href="regole_scadenze.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">arrow_back</span>
                     </a>
                 </div>
-
-                <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
                 <div class="header-center">
                     <h2 class="header-title" data-t="general_config_title">
                         CONFIGURAZIONE GENERALI
                     </h2>
                 </div>
-
-                <!-- ZONA DESTRA: Home (1 icona) -->
                 <div class="header-right">
                     <a href="home_page.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">home</span>
@@ -80,6 +74,7 @@
                 </div>
             </div>
         </header>
+        <div class="spacer-header"></div>
 
         <main class="settings-container no-select">
             <div class="settings-group">
@@ -169,12 +164,13 @@
             </div>
         </main>
 
+        <div class="spacer-footer"></div>
         <!-- FOOTER PREMIUM -->
-        <div id="footer-placeholder"></div>
+        <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/configurazione_generali.js?v=3.5" type="module"></script>
+    <script src="assets/js/configurazione_generali.js?v=3.1" type="module"></script>
 </body>
 
 </html>
