--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -3,139 +3,135 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title data-t="home_page_title">Home Page</title>
 
-    <!-- Titanium Engine Stack -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
+    <!-- Titanium V3.1 Engine Stack -->
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
-    <script src="assets/js/ui-core.js?v=3.5"></script>
+
+    <!-- CSS Standard & Page Specific (Protocollo V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/dashboard_common.css?v=1.0">
+
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json?v=3.1" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="App Codici">
     <meta name="theme-color" content="#0a0f1e">
 </head>
 
 <body class="titanium-bg">
-    <!-- HEADER PLACEHOLDER -->
-    <div id="header-placeholder"></div>
+    <div class="titanium-container">
+        <div class="titanium-glow"></div>
 
-    <div class="titanium-box">
-        <div class="glass-glow pointer-events-none"></div>
+        <!-- HEADER (Balanced 3-Zone) -->
+        <header id="header-placeholder" class="titanium-header"></header>
+        <div class="spacer-header"></div>
 
-        <!-- MAIN (Data-Lock-UI for native effect) -->
+        <!-- MAIN (Matrix Architecture V3.1) -->
         <main class="titanium-main" data-lock-ui>
 
-            <div class="dashboard-grid">
-                <!-- SEZIONE 1: ACCESSO RAPIDO -->
-                <div class="dashboard-grid-2">
-                    <a href="area_privata.html" class="matrix-blue border-glow" data-ui-section="privato">
-                        <div class="bg-icon-container">
-                            <span class="material-symbols-outlined titanium-icon-lg" role="img"
-                                aria-label="Icona Cassaforte Personale" data-t-aria="aria_private">lock</span>
-                        </div>
-                        <div class="card-text-block">
-                            <h3 data-t="section_private_title">Privato</h3>
-                            <p data-ui="hint" data-t="section_private_desc">Cassaforte Personale</p>
-                        </div>
-                    </a>
+            <div class="matrix-grid">
 
-                    <a href="lista_aziende.html" class="matrix-green border-glow" data-ui-section="azienda">
-                        <div class="bg-icon-container">
-                            <span class="material-symbols-outlined titanium-icon-lg" role="img"
-                                aria-label="Icona Gestione Aziendale" data-t-aria="aria_company">apartment</span>
-                        </div>
-                        <div class="card-text-block">
-                            <h3 data-t="section_company_title">Azienda</h3>
-                            <p data-ui="hint" data-t="section_company_desc">Gestione Risorse</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- SEZIONE 2: SCADENZE (FULL WIDTH) -->
-                <div data-href="scadenze.html" data-ui-section="scadenze" role="button" tabindex="0"
-                    class="matrix-orange border-glow scadenze-box no-lift">
-                    <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
-                        <span class="material-symbols-outlined titanium-icon-xl" role="img"
-                            aria-label="Calendario Scadenze" data-t-aria="aria_deadlines">calendar_month</span>
+                <!-- Card: PRIVATO (Matrix-Blue) -->
+                <a href="area_privata.html" class="matrix-card card-blue border-glow adaptive-shadow">
+                    <div class="glass-shine"></div>
+                    <div class="saetta-master"></div>
+                    <div class="matrix-icon-box">
+                        <span class="material-symbols-outlined">lock</span>
                     </div>
-                    <div class="box-content-main">
-                        <div class="box-header-flex">
-                            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.25rem;">
-                                <span id="urgent-count-badge" class="urgent-badge loading-pulse"
-                                    style="margin-left: 0;">
-                                    <span id="urgent-count">---</span>
-                                </span>
-                                <h3 data-t="section_deadlines_title" style="margin-bottom: 0;">Scadenze</h3>
-                            </div>
-                            <p data-ui="hint" data-t="section_deadlines_desc">Controlla i prossimi impegni</p>
+                    <div class="card-text-block">
+                        <h3 data-t="section_private_title">Privato</h3>
+                        <p data-t="section_private_desc">Cassaforte Personale</p>
+                    </div>
+                </a>
+
+                <!-- Card: AZIENDA (Matrix-Green) -->
+                <a href="lista_aziende.html" class="matrix-card card-green border-glow adaptive-shadow">
+                    <div class="glass-shine"></div>
+                    <div class="saetta-master"></div>
+                    <div class="matrix-icon-box">
+                        <span class="material-symbols-outlined">apartment</span>
+                    </div>
+                    <div class="card-text-block">
+                        <h3 data-t="section_company_title">Azienda</h3>
+                        <p data-t="section_company_desc">Gestione Risorse</p>
+                    </div>
+                </a>
+
+                <!-- Card: SCADENZE (Matrix-Orange) -->
+                <div data-href="scadenze.html" class="matrix-card card-orange border-glow adaptive-shadow">
+                    <div class="glass-shine"></div>
+                    <div class="saetta-master"></div>
+                    <div class="flex justify-between items-start w-full">
+                        <div class="matrix-icon-box">
+                            <span class="material-symbols-outlined">calendar_month</span>
                         </div>
-                        <div id="deadline-list-container" class="dashboard-dynamic-list">
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 80%;"></div>
-                            </div>
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 60%;"></div>
-                            </div>
-                        </div>
+                        <span id="urgent-count-badge" class="badge-count loading-pulse">
+                            <span id="urgent-count">---</span>
+                        </span>
+                    </div>
+                    <div class="card-text-block">
+                        <h3 data-t="section_deadlines_title">Scadenze</h3>
+                        <p data-t="section_deadlines_desc">Controlla i prossimi impegni</p>
+                    </div>
+                    <!-- Mini List Dinamica -->
+                    <div id="deadline-list-container" class="dashboard-list">
+                        <!-- Skeleton loading items -->
+                        <div class="skeleton-text" style="height: 12px; margin-bottom: 8px; width: 80%;"></div>
+                        <div class="skeleton-text" style="height: 12px; width: 60%;"></div>
                     </div>
                 </div>
 
-                <!-- SEZIONE 3: URGENZE (FULL WIDTH) -->
-                <div id="urgenze-card" data-href="urgenze.html" data-ui-section="urgenze" role="button" tabindex="0"
-                    class="matrix-red border-glow urgenze-box no-lift">
-                    <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
-                        <span class="material-symbols-outlined titanium-icon-xl" role="img" aria-label="Allarmi Urgenze"
-                            data-t-aria="aria_emergencies">warning</span>
+                <!-- Card: URGENZE (Matrix-Red) -->
+                <div id="urgenze-card" data-href="urgenze.html"
+                    class="matrix-card card-red border-glow adaptive-shadow">
+                    <div class="glass-shine"></div>
+                    <div class="saetta-master"></div>
+                    <div class="flex justify-between items-start w-full">
+                        <div class="matrix-icon-box">
+                            <span class="material-symbols-outlined">warning</span>
+                        </div>
+                        <span id="expired-count-badge" class="badge-count loading-pulse">
+                            <span id="expired-count">---</span>
+                        </span>
                     </div>
-                    <div class="box-content-main">
-                        <div class="box-header-flex">
-                            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.25rem;">
-                                <span id="emergency-count-badge" class="urgent-badge loading-pulse"
-                                    style="margin-left: 0;">
-                                    <span id="emergency-count">---</span>
-                                </span>
-                                <h3 data-t="section_emergencies_title" style="margin-bottom: 0;">Urgenze</h3>
-                            </div>
-                            <p data-ui="hint" data-t="section_emergencies_desc">Documenti scaduti o mancanti</p>
-                        </div>
-                        <div id="urgenze-list" class="dashboard-dynamic-list no-scrollbar">
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 70%;"></div>
-                            </div>
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 50%;"></div>
-                            </div>
-                        </div>
+                    <div class="card-text-block">
+                        <h3 data-t="section_urgencies_title">Urgenze</h3>
+                        <p data-t="section_urgencies_desc">Documenti scaduti o mancanti</p>
+                    </div>
+                    <!-- Mini List Dinamica -->
+                    <div id="urgenze-list" class="dashboard-list">
+                        <!-- Skeleton loading items -->
+                        <div class="skeleton-text" style="height: 12px; margin-bottom: 8px; width: 70%;"></div>
+                        <div class="skeleton-text" style="height: 12px; width: 50%;"></div>
                     </div>
                 </div>
+
             </div>
+
         </main>
 
+        <div class="spacer-footer"></div>
     </div>
 
-    <!-- FOOTER PLACEHOLDER -->
-    <div id="footer-placeholder"></div>
+    <!-- FOOTER (System Standard) -->
+    <footer id="footer-placeholder" class="titanium-footer"></footer>
 
-    <!-- SCRIPTS MODULARI (10/10 Architecture) -->
-    <script type="module" src="assets/js/main.js?v=3.5"></script>
-    <script type="module" src="assets/js/home.js?v=3.5"></script>
+    <!-- Scripts Modulari -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/home.js?v=3.1"></script>
 </body>
 
 </html>
