--- a/Frontend/public/modifica_account_azienda.html
+++ b/Frontend/public/modifica_account_azienda.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="color-scheme" content="dark only">
     <meta name="theme-color" content="#0a0f1e">
     <title>Modifica Account Azienda</title>
@@ -16,9 +16,14 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
+
+    <!-- Core Engine -->
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
     <style>
         /* Form Controls Overrides per stile Legacy-to-V3 */
@@ -46,34 +51,14 @@
     </style>
 </head>
 
-<body
-    style="font-family: 'Manrope', sans-serif; background-color: #0a0f1e; color: #f8fafc; margin: 0; padding: 0; overflow-x: hidden;">
+<body class="titanium-bg">
 
-    <div
-        style="position: relative; display: flex; flex-direction: column; width: 100%; min-height: 100vh; max-width: 48rem; margin-top: 0; margin-bottom: 0; margin-left: auto; margin-right: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5); overflow: hidden; background-color: #0a0f1e; border-left: 1px solid rgba(255, 255, 255, 0.05); border-right: 1px solid rgba(255, 255, 255, 0.05);">
+    <div class="titanium-container">
+        <div class="titanium-glow"></div>
 
-        <!-- Header -->
-        <header
-            style="position: fixed; top: 0; left: 0; right: 0; max-width: 48rem; margin-left: auto; margin-right: auto; z-index: 50; padding: 0.75rem 1rem; background: rgba(10, 15, 30, 0.8); backdrop-filter: blur(12px); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">
-            <div
-                style="display: flex; align-items: center; justify-content: space-between; width: 100%; height: 2.5rem; gap: 1rem;">
-                <button id="btn-back" onclick="history.back()"
-                    style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; border-radius: 0.75rem; background: transparent; border: none; color: #9ca3af; cursor: pointer; transition: all 0.2s;">
-                    <span class="material-symbols-outlined" style="font-size: 24px;">arrow_back</span>
-                </button>
-                <h2
-                    style="color: white; font-size: 1.125rem; font-weight: bold; letter-spacing: -0.025em; text-align: center; flex: 1; margin: 0;">
-                    Modifica Account
-                </h2>
-                <a href="home_page.html"
-                    style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; border-radius: 0.75rem; background: transparent; border: none; color: #9ca3af; cursor: pointer; text-decoration: none; transition: all 0.2s;">
-                    <span class="material-symbols-outlined" style="font-size: 24px;">home</span>
-                </a>
-            </div>
-        </header>
-
-        <!-- Spacer -->
-        <div style="height: 4rem; width: 100%; flex-shrink: 0;"></div>
+        <!-- Automated Titanium Header -->
+        <header id="header-placeholder" class="titanium-header"></header>
+        <div class="spacer-header"></div>
 
         <!-- Main Content -->
         <main class="titanium-main">
@@ -458,21 +443,14 @@
             </div>
         </main>
 
-        <!-- Fixed Bottom Action -->
-        <div
-            style="position: fixed; bottom: 0; left: 0; right: 0; max-width: 48rem; margin-left: auto; margin-right: auto; padding: 1rem; background-color: rgba(10, 15, 30, 0.8); backdrop-filter: blur(24px); border-top: 1px solid rgba(255, 255, 255, 0.05); z-index: 40;">
-            <button id="btn-save"
-                style="width: 100%; height: 3.5rem; background: linear-gradient(to right, #2563eb, #3b82f6); color: white; border-radius: 0.75rem; border: none; box-shadow: 0 10px 15px -3px rgba(30, 58, 138, 0.4); font-weight: bold; font-size: 1.125rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem; cursor: pointer; transition: all 0.2s;">
-                <span class="material-symbols-outlined">save</span>
-                Salva Modifiche
-            </button>
-        </div>
-
+        <div class="spacer-footer"></div>
+        <!-- FOOTER PREMIUM -->
+        <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
     <!-- Script -->
-    <script src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modifica_account_azienda.js"></script>
+    <script src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/modifica_account_azienda.js?v=3.1"></script>
 </body>
 
 </html>
