--- a/Frontend/public/modifica_scadenza.html
+++ b/Frontend/public/modifica_scadenza.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Modifica Scadenza - Titanium</title>
 
     <!-- Google Fonts -->
@@ -14,14 +14,14 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script src="assets/js/ui-core.js?v=3.5"></script>
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script src="assets/js/ui-core.js?v=3.1"></script>
 
     <style>
         .filled {
@@ -86,10 +86,10 @@
     </style>
 </head>
 
-<body class="antialiased">
-    <div class="titanium-box">
+<body class="titanium-bg">
+    <div class="titanium-container">
         <!-- GLOW LAYER -->
-        <div class="glass-glow"></div>
+        <div class="titanium-glow"></div>
 
         <!-- Header (Balanced Protocol) -->
         <header class="titanium-header">
@@ -111,6 +111,8 @@
                 </div>
             </div>
         </header>
+
+        <div class="spacer-header"></div>
 
         <main class="settings-container no-select">
             <div class="settings-group">
@@ -232,10 +234,6 @@
                     </div>
                 </div>
 
-            </div>
-
-            <div class="footer-spacer"></div>
-
         </main>
 
         <!-- AZIONE FISSA BOTTOM -->
@@ -246,155 +244,13 @@
             </button>
         </div>
 
-        <!-- FOOTER PREMIUM -->
-        <footer class="titanium-footer">
-            <div style="opacity: 0.3; text-align: center;">
-                <span
-                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
-                    Titanium Security Protocol V3.5
-                </span>
-            </div>
-        </footer>
+        <div class="spacer-footer"></div>
+        <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.5"></script>
-    <script type="module">
-        import { getScadenza, updateScadenza } from './assets/js/db.js';
-        import { db } from './assets/js/firebase-config.js';
-        import { collection, getDocs, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
-        import { auth } from './assets/js/firebase-config.js';
-        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
-        import { showToast } from './assets/js/ui-core.js';
-
-        let currentScadenzaId = null;
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            currentScadenzaId = urlParams.get('id');
-
-            if (!currentScadenzaId) {
-                alert("ID Scadenza mancante");
-                history.back();
-                return;
-            }
-
-            onAuthStateChanged(auth, async (user) => {
-                if (user) {
-                    // 1. Caricamento Configurazioni per Menu a Tendina (Come in Aggiungi Scadenza)
-                    try {
-                        const [autoSnap, docSnap, genSnap] = await Promise.all([
-                            getDoc(doc(db, "users", user.uid, "settings", "deadlineConfig")),
-                            getDoc(doc(db, "users", user.uid, "settings", "deadlineConfigDocuments")),
-                            getDoc(doc(db, "users", user.uid, "settings", "generalConfig"))
-                        ]);
-
-                        const unified = {
-                            automezzi: autoSnap.exists() ? autoSnap.data() : { deadlineTypes: [], names: [] },
-                            documenti: docSnap.exists() ? docSnap.data() : { deadlineTypes: [], names: [] },
-                            generali: genSnap.exists() ? genSnap.data() : { deadlineTypes: [], names: [] }
-                        };
-
-                        // Popolamento Select Categoria
-                        const catSelect = document.getElementById('edit-category');
-                        if (catSelect) {
-                            catSelect.innerHTML = '<option value="">Seleziona Categoria...</option>';
-                            const groups = [
-                                { label: "AUTOMEZZI", types: unified.automezzi.deadlineTypes },
-                                { label: "DOCUMENTI", types: unified.documenti.deadlineTypes },
-                                { label: "GENERALI", types: unified.generali.deadlineTypes }
-                            ];
-
-                            groups.forEach(g => {
-                                if (g.types && g.types.length > 0) {
-                                    const groupEl = document.createElement('optgroup');
-                                    groupEl.label = g.label;
-                                    g.types.forEach(t => {
-                                        const name = typeof t === 'object' ? t.name : t;
-                                        const opt = document.createElement('option');
-                                        opt.value = name;
-                                        opt.textContent = name;
-                                        groupEl.appendChild(opt);
-                                    });
-                                    catSelect.appendChild(groupEl);
-                                }
-                            });
-                        }
-
-                        // Popolamento Datalist Nomi
-                        const namesList = document.getElementById('names-list');
-                        if (namesList) {
-                            const allNames = new Set([
-                                ...(unified.automezzi.names || []),
-                                ...(unified.documenti.names || []),
-                                ...(unified.generali.names || [])
-                            ]);
-                            [...allNames].sort().forEach(n => {
-                                const opt = document.createElement('option');
-                                opt.value = n;
-                                namesList.appendChild(opt);
-                            });
-                        }
-                    } catch (e) {
-                        console.warn("Errore caricamento config menu:", e);
-                    }
-
-                    // 2. Caricamento Dati Scadenza
-                    const scadenza = await getScadenza(user.uid, currentScadenzaId);
-                    if (scadenza) {
-                        document.getElementById('edit-title').value = scadenza.title || '';
-                        document.getElementById('edit-holder').value = scadenza.name || scadenza.holder || '';
-                        document.getElementById('edit-date').value = scadenza.dueDate || '';
-                        document.getElementById('edit-category').value = scadenza.type || scadenza.category || '';
-                        document.getElementById('edit-notes').value = scadenza.notes || '';
-
-                        // Link Gestione Allegati & Count
-                        const btnManage = document.getElementById('btn-manage-attachments');
-                        if (btnManage) {
-                            btnManage.href = `gestione_allegati.html?id=${currentScadenzaId}&context=scadenza&ownerId=${user.uid}`;
-
-                            try {
-                                const attRef = collection(db, "users", user.uid, "scadenze", currentScadenzaId, "attachments");
-                                const attSnap = await getDocs(attRef);
-                                const countSpan = document.getElementById('attachments-count');
-                                if (countSpan) {
-                                    countSpan.textContent = attSnap.size;
-                                    countSpan.style.display = attSnap.size > 0 ? 'inline' : 'none';
-                                }
-                            } catch (e) {
-                                console.warn("Errore caricamento contatore allegati:", e);
-                            }
-                        }
-                    }
-                }
-            });
-
-            document.getElementById('save-changes-btn').onclick = async () => {
-                const user = auth.currentUser;
-                if (!user) return;
-
-                const updatedData = {
-                    title: document.getElementById('edit-title').value,
-                    name: document.getElementById('edit-holder').value, // Salva correttamente l'intestatario
-                    holder: document.getElementById('edit-holder').value, // Ridondanza utile
-                    dueDate: document.getElementById('edit-date').value,
-                    category: document.getElementById('edit-category').value,
-                    notes: document.getElementById('edit-notes').value
-                };
-
-                try {
-                    await updateScadenza(user.uid, currentScadenzaId, updatedData);
-                    showToast('Scadenza aggiornata!', 'success');
-                    setTimeout(() => {
-                        window.location.href = `dettaglio_scadenza.html?id=${currentScadenzaId}`;
-                    }, 1000);
-                } catch (error) {
-                    console.error(error);
-                    showToast('Errore aggiornamento', 'error');
-                }
-            };
-        });
-    </script>
+    <script src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/modifica_scadenza.js?v=3.1"></script>
 </body>
 
 </html>
