--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Profilo - Titanium Account</title>
 
     <!-- Google Fonts -->
@@ -14,20 +14,20 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.0) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
+    <!-- Design System Master (Titanium Protocol V3.1) -->
+    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
+    <script src="assets/js/titanium-config.js?v=3.1"></script>
+    <script src="assets/js/titanium-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body class="antialiased">
-    <div class="titanium-box">
+<body class="titanium-bg">
+    <div class="titanium-container">
         <!-- Faro Estetico -->
-        <div class="glass-glow"></div>
+        <div class="titanium-glow"></div>
 
         <!-- HEADER -->
         <!-- HEADER FISSO -->
@@ -47,7 +47,7 @@
                     </h1>
                 </div>
 
-                <!-- ZONA DESTRA: Info + Home (2 icone - dispari, extra a dx) -->
+                <!-- ZONA DESTRA: Info + Home -->
                 <div class="header-right">
                     <button type="button" class="btn-icon-header accordion-header" data-target="guida-pane">
                         <span class="material-symbols-outlined">info</span>
@@ -58,6 +58,7 @@
                 </div>
             </div>
         </header>
+        <div class="spacer-header"></div>
 
         <main class="settings-container no-select">
 
@@ -111,125 +112,6 @@
                 </div>
             </div>
 
-            <!-- SEZIONE PROFILO (Horizontal Layout) -->
-            <div class="titanium-vault border-glow profile-card"
-                style="flex-direction: row; justify-content: space-between; align-items: center; text-align: left; padding: 2rem;">
-
-                <!-- SX: NOME E COGNOME -->
-                <div class="profile-info" style="align-items: flex-start; width: auto;">
-                    <h2 id="profile-firstname"
-                        style="margin: 0; font-size: 1.3rem; font-weight: 700; line-height: 1.2;">-</h2>
-                    <h2 id="profile-lastname" style="margin: 0; font-size: 1.3rem; font-weight: 700; line-height: 1.2;">
-                        -</h2>
-                </div>
-
-                <!-- DX: AVATAR con Edit Overlay (Protocollo Gold) -->
-                <div class="avatar-wrapper"
-                    style="width: 70px; height: 70px; border-radius: 20px; box-shadow: 0 0 20px rgba(37, 99, 235, 0.4); margin-right: 0.5rem; position: relative; cursor: pointer;"
-                    onclick="document.getElementById('avatar-input').click()">
-                    <img id="profile-avatar" src="assets/images/user-avatar-5.png" class="avatar-main" alt="Avatar"
-                        style="border-radius: 18px; width: 100%; height: 100%; object-fit: cover;">
-                    <div class="avatar-edit-overlay"
-                        style="position: absolute; inset: 0; background: rgba(0,0,0,0.5); border-radius: 18px; display: flex; align-items: center; justify-content: center; opacity: 0; transition: opacity 0.2s;">
-                        <span class="material-symbols-outlined"
-                            style="color: white; font-size: 1.5rem;">photo_camera</span>
-                    </div>
-                    <input type="file" id="avatar-input" accept="image/*" style="display: none;">
-                </div>
-
-                <style>
-                    .avatar-wrapper:hover .avatar-edit-overlay {
-                        opacity: 1 !important;
-                    }
-
-                    /* TITANIUM ACTION GRID V3.0 */
-                    .titanium-action-grid {
-                        display: grid;
-                        grid-template-columns: 1fr 1fr;
-                        gap: 6px;
-                        flex-shrink: 0;
-                        width: 70px;
-                    }
-
-                    .titanium-action-btn {
-                        width: 32px;
-                        height: 32px;
-                        border-radius: 8px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        cursor: pointer;
-                        transition: all 0.2s;
-                        border: 1px solid transparent;
-                        /* Base border */
-                    }
-
-                    .titanium-action-btn:hover {
-                        transform: scale(1.05);
-                    }
-
-                    /* VARIANTI */
-                    .btn-view {
-                        background: var(--surface-sub);
-                        border-color: var(--border-color);
-                        color: var(--text-primary);
-                    }
-
-                    .btn-copy {
-                        background: var(--surface-sub);
-                        border-color: var(--border-color);
-                        color: var(--text-primary);
-                    }
-
-                    .btn-edit {
-                        background: rgba(37, 99, 235, 0.2);
-                        border-color: rgba(37, 99, 235, 0.3);
-                        color: #60a5fa;
-                    }
-
-                    .btn-delete {
-                        background: rgba(239, 68, 68, 0.15);
-                        border-color: rgba(239, 68, 68, 0.3);
-                        color: #f87171;
-                    }
-
-                    /* QR CHECKBOX V3.0 (Flags) */
-                    .qr-check {
-                        appearance: none;
-                        width: 18px;
-                        height: 18px;
-                        border: 1px solid rgba(255, 255, 255, 0.3);
-                        border-radius: 5px;
-                        background: rgba(0, 0, 0, 0.3);
-                        cursor: pointer;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        transition: all 0.2s;
-                        flex-shrink: 0;
-                        margin-right: 0.8rem;
-                    }
-
-                    .qr-check:checked {
-                        background: #3b82f6;
-                        border-color: #3b82f6;
-                        box-shadow: 0 0 12px rgba(59, 130, 246, 0.5);
-                    }
-
-                    .qr-check:checked::after {
-                        content: 'check';
-                        font-family: 'Material Symbols Outlined';
-                        font-size: 14px;
-                        color: white;
-                        font-weight: 700;
-                    }
-
-                    .qr-check:hover {
-                        border-color: rgba(255, 255, 255, 0.8);
-                    }
-                </style>
-            </div>
-
             <!-- 2. MASTER VAULT (Card Unificata) -->
             <div class="settings-vault">
 
@@ -253,11 +135,10 @@
                                             Nascita</span>
                                     </div>
                                 </div>
-                                <div class="settings-actions" style="display:flex; gap:0.75rem; align-items:center;">
+                                <div class="settings-actions" style="display:flex; gap:0.5rem; align-items:center;">
                                     <button class="btn-icon-header"
-                                        style="position: relative; width: 32px; height: 32px; right: auto;"
                                         onclick="event.stopPropagation(); window.editSection('dati-personali')">
-                                        <span class="material-symbols-outlined" style="font-size: 1.1rem;">edit</span>
+                                        <span class="material-symbols-outlined" style="font-size: 18px;">edit</span>
                                     </button>
                                     <span class="material-symbols-outlined settings-chevron">expand_more</span>
                                 </div>
@@ -278,7 +159,7 @@
                                     <span id="cf-view" class="field-value"
                                         style="font-family: monospace; letter-spacing: 0.1em;">-</span>
                                 </fieldset>
-                                <div style="display: grid; gap: 1rem; grid-template-columns: 1fr 1fr;">
+                                <div style="display: flex; flex-direction: column; gap: 1.5rem;">
                                     <fieldset class="glass-field-titanium glass-field-blue">
                                         <legend class="field-label">Nascita</legend>
                                         <span id="birth_date-view" class="field-value">-</span>
@@ -416,10 +297,8 @@
                     <div
                         style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
                         <h4 class="settings-group-title" style="margin: 0;">Note Anagrafica</h4>
-                        <button class="btn-icon-header"
-                            style="position: relative; width: 32px; height: 32px; right: auto;"
-                            onclick="window.editSection('note')">
-                            <span class="material-symbols-outlined" style="font-size: 1.1rem;">edit</span>
+                        <button class="btn-icon-header" onclick="window.editSection('note')">
+                            <span class="material-symbols-outlined" style="font-size: 18px;">edit</span>
                         </button>
                     </div>
                     <div class="titanium-vault"
@@ -436,14 +315,14 @@
 
         </main>
 
+        <div class="spacer-footer"></div>
         <!-- FOOTER PREMIUM -->
-        <div id="footer-placeholder"></div>
+        <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
 
-    <!-- Scripts con Cache Busting (Protocollo V3.0) -->
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.5" type="module"></script>
-    <script src="assets/js/profilo_privato.js?v=3.5" type="module"></script>
+    <script src="assets/js/main.js?v=3.1" type="module"></script>
+    <script src="assets/js/profilo_privato.js?v=3.1" type="module"></script>
 </body>
 
 </html>
